ipro-legacy-eks/Kubernetes/ipro_deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${IPRO_LEGACY_NAMESPACE}

# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: ${IPRO_LEGACY_PV}
# spec:
#   capacity:
#     storage: ${IPRO_LEGACY_PV_SIZE}
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteMany
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: efs-sc
#   csi:
#     driver: efs.csi.aws.com
#     volumeHandle: ${EFS_ID}:/:${EFS_AP}
#     volumeAttributes:
#       encryptInTransit: "true"

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: ${IPRO_LEGACY_PVC}
#   namespace: ${IPRO_LEGACY_NAMESPACE}
# spec:
#   accessModes:
#     - ReadWriteMany
#   storageClassName: efs-sc
#   volumeName: ${IPRO_LEGACY_PV}
#   selector:
#     matchLabels:
#       name: ${IPRO_LEGACY_PV}
#   resources:
#     requests:
#       storage: ${IPRO_LEGACY_PV_SIZE}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${IPRO_LEGACY_NAMESPACE}
  name: ${IPRO_LEGACY_DEPLOYMENT_NAME}
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${IPRO_LEGACY_APP_NAME}
      namespace: ${IPRO_LEGACY_NAMESPACE}
      cloud.google.com/gke-nodepool: ${IPRO_LEGACY_NODE_GROUP}
  replicas: ${IPRO_LEGACY_MIN_REP}
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${IPRO_LEGACY_APP_NAME}
        namespace: ${IPRO_LEGACY_NAMESPACE}
        cloud.google.com/gke-nodepool: ${IPRO_LEGACY_NODE_GROUP}
    spec:
      containers:
        - image: ${IPRO_LEGACY_REPOSITORY}:${TAG}
          imagePullPolicy: Always
          name: ${IPRO_LEGACY_APP_NAME}
          ports:
            - containerPort: 8060
          resources:
            requests:
              cpu: ${IPRO_LEGACY_REQ_CPU}
              memory: ${IPRO_LEGACY_REQ_MEM}
            limits:
              cpu: ${IPRO_LEGACY_LIM_CPU}
              memory: ${IPRO_LEGACY_LIM_MEM}
      #     volumeMounts:
      #       - mountPath: /storage
      #         name: ${IPRO_LEGACY_VOLUME}
      # volumes:
      #   - name: ${IPRO_LEGACY_VOLUME}
      #     persistentVolumeClaim:
      #       claimName: ${IPRO_LEGACY_PVC}
      nodeSelector:
        cloud.google.com/gke-nodepool: ${IPRO_LEGACY_NODE_GROUP}

---
apiVersion: v1
kind: Service
metadata:
  namespace: ${IPRO_LEGACY_NAMESPACE}
  name: ${IPRO_LEGACY_SERVICE_NAME}
spec:
  ports:
    - port: 80
      targetPort: 8060
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ${IPRO_LEGACY_APP_NAME}
    namespace: ${IPRO_LEGACY_NAMESPACE}
    cloud.google.com/gke-nodepool: ${IPRO_LEGACY_NODE_GROUP}

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: ${IPRO_LEGACY_MIDDLEWARE_NAME}
#   namespace: ${IPRO_LEGACY_NAMESPACE}
# spec:
#   headers:
#     customResponseHeaders:
#       X-XSS-Protection: "1; mode=block"
#       Referrer-Policy: "strict-origin-when-cross-origin"
#       Permissions-Policy: "geolocation=(self), camera=(self), microphone=(self), autoplay=(self)"
#       X-Content-Type-Options: "nosniff"
#       X-Frame-Options: "sameorigin"
#       X-Permitted-Cross-Domain-Policies: "none"
#       Strict-Transport-Security: "max-age=31536000; includeSubdomains; preload"
#       Cross-Origin-Embedder-Policy: "unsafe-none"
#       Cross-Origin-Opener-Policy: "unsafe-none"
#       Cross-Origin-Resource-Policy: "same-origin"
#       Cache-Control: "no-cache, no-store, must-revalidate"

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: ${IPRO_LEGACY_INGRESSROUTE_NAME}
#   namespace: ${IPRO_LEGACY_NAMESPACE}
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`${IPRO_LEGACY_HOST_NAME}`)
#       kind: Rule
#       middlewares:
#         - name: ${IPRO_LEGACY_MIDDLEWARE_NAME}
#       services:
#         - name: ${IPRO_LEGACY_SERVICE_NAME}
#           port: 80

# Google Managed SSL Certificate.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${IPRO_LEGACY_NAMESPACE}
  name: ${IPRO_LEGACY_INGRESS_NAME}
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: managed-certificate
    kubernetes.io/ingress.global-static-ip-name: exp-prod-ipro-legacy-api  
    # alb.ingress.kubernetes.io/target-type: instance
    # alb.ingress.kubernetes.io/certificate-arn: ${IPRO_LEGACY_CERTIFICATE_ARN}
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/scheme: internal
    # alb.ingress.kubernetes.io/load-balancer-name: ${IPRO_LEGACY_ALB}
    # alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=ss-prd1-v2-alb-access-logs-new,access_logs.s3.prefix=iproapilegacy-alb,idle_timeout.timeout_seconds=60
    # alb.ingress.kubernetes.io/wafv2-acl-arn: ${WAF_ARN}
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
    # kubernetes.io/ingress.class: ${ING_CLS_NAME}
spec:
  rules:
    - host: "legacy.ipro-gcp.experience.com" #${IPRO_LEGACY_HOST_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${IPRO_LEGACY_SERVICE_NAME}
                port:
                  number: 80
