ipro-legacy-eks/Kubernetes/setup.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${IPRO_NAMESPACE}
  name: ${IPRO_SERVICE_NAME}
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ${IPRO_APP_NAME}
    namespace: ${IPRO_NAMESPACE}
    alpha.eksctl.io/nodegroup-name: ${IPRO_NODE_GROUP}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${IPRO_NAMESPACE}
  name: ${IPRO_INGRESS_NAME}
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # ingress.kubernetes.io/force-ssl-redirect: "true"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${IPRO_CERTIFICATE_ARN}
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ${IPRO_SERVICE_NAME}
              servicePort: 80
